# bank-client-subscription-classifier

./: .gitignore  LICENSE  MLproject  README.md  conda.yaml  docker-compose.yml  main.py  mkdocs.yml  mlflow.db  optuna.db  pyproject.toml  python_env.yaml  requirements.txt
.github/workflows/: deploy-docs.yml
config/: config.yaml  config_loader.py  hyperparameters.yaml  model_config.yaml
data/predictions/: test_predictions.csv  xgboost_categorcal_engineering_predictions.csv  xgboost_duration_predictions.csv  xgboost_feature_engineering_predictions.csv  xgboost_numerical_engineering_predictions.csv  xgboost_predictions.csv
docs/docs/api/: index.md
docs/docs/data/: eda.md  overview.md  preprocessing.md
docs/docs/mlflow/: guide.md
docs/docs/mlflow/v1/: 01_overview.md  02_architecture.md  03_data_pipeline.md  04_model_training.md  05_best_model.md  06_model_inference.md  06_upload_predictions.md  07_conclusions.md  07_upload_predictions.md  08_conclusions.md
docs/docs/mlflow/v2/: 01_overview.md  02_architecture.md  04_model_training.md  05_best_model.md  07_upload_predictions.md  08_conclusions.md
docs/docs/mlflow/v3/: 01_overview.md  02_architecture.md  02_duration_feature_treatment.md  03_categorical_feature_engineering.md  05_feature_interactions.md
docs/docs/mlflow/v4/: 01_overview.md  02_duration_feature_treatment.md  03_categorical_feature_engineering.md  04_numerical_feature_enhancements.md  05_feature_interactions.md  06_conclusions.md
docs/docs/project/: competition.md  setup.md  structure.md
docs/overrides/: main.html
notebooks/: 01_exploratory_data_analysis.ipynb  01_exploratory_data_analysis_executed.ipynb  03_model_experiments.ipynb  04_exploratory_data_analysis_processed.ipynb  04_predictions_analysis.ipynb  promote_model.ipynb
src/: predict.py  preprocess.py  train.py
src/data/: load_data.py  preprocess.py
src/models/: base_model.py  catboost_model.py  evaluate.py  lightgbm_model.py  predict_model.py  train_model.py  xgboost_model.py
src/models/core/: base_model.py  model_factory.py
src/models/implementations/: catboost_model.py  lightgbm_model.py  xgboost_model.py
tmp/: MLmodel  conda.yaml  requirements.txt
